--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
@@ -24,7 +24,7 @@
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%;"> Número de solicitud </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitud }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitudPago }} </td>
             </ng-container>
             <ng-container matColumnDef="modalidadContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 11%;"> Modalidad del contrato </th>
