--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
@@ -18,7 +18,8 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo fuente de recursos afectado
                 por el valor facturado </th>
             <td mat-cell *matCellDef="let element" align="center">
-                {{ element.saldoValorFacturado }}
+                <!-- {{ element.saldoValorFacturado }} -->
+                Pendiente por novedades contractuales
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
