--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-porcntj-partic-gog/tabla-porcntj-partic-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-porcntj-partic-gog/tabla-porcntj-partic-gog.component.html
@@ -24,7 +24,10 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Porcentaje de participación </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let el of element.porcParticipacion ; let i = index">
-                {{el.numero }}
+                <!--
+                    {{ el.numero }}
+                -->
+                Pendiente por novedades contractuales
             </div>
           </td>
         </ng-container>
