--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -44,6 +44,7 @@
     <app-form-descuentos-gog    [solicitudPagoFaseCriterio]="solicitudPagoFaseCriterio"
                                 [listaCriterios]="listaCriterios"
                                 [solicitudPagoFaseFacturaDescuento]="this.solicitudPagoFaseFactura.solicitudPagoFaseFacturaDescuento"
-                                [valorNetoGiro]="listData.valorNetoGiro">
+                                [valorNetoGiro]="listData.valorNetoGiro"
+                                [solicitudPago]="solicitudPago">
     </app-form-descuentos-gog>
 </section>
