--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -57,43 +57,15 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title">
+                <mat-panel-title class="expansion-style--title" [ngClass]="listaSemaforos.semaforoOrigen">
                     Origen
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <div align="center">
                 <b>Consecutivo FFIE: 001</b>    
             </div>
-            <mat-card class="shipping-card var-main-gris">
-                <mat-card-content align="left">
-                    <mat-card-title class="header-card--text sub-text">
-                        Aportante 1
-                    </mat-card-title>
-                    <div class="mt-1em">
-                        <p><strong>Tipo de aportante: </strong>Entidad Territorial</p>
-                        <p><strong>Nombre del aportante: </strong>Alcaldía de Susacón</p>
-                        <p><strong>Fuente: </strong>Contingencias</p>
-                        <p><strong>Nombre de la Cuenta: </strong>Alcaldía de Susacón</p>
-                        <p><strong>Número de Cuenta: </strong>778969876543257</p>
-                        <p><strong>Banco: </strong>Davivienda</p>
-                        <p><strong>Tipo de Cuenta: </strong>Corriente</p>
-                        <p><strong>Código SIFI: </strong>357314</p>
-                    </div>
-                    <mat-card-title class="header-card--text sub-text">
-                        Aportante 2
-                    </mat-card-title>
-                    <div class="mt-1em">
-                        <p><strong>Tipo de aportante: </strong>Tercero</p>
-                        <p><strong>Nombre del aportante: </strong>Fundación Pies Descalzos</p>
-                        <p><strong>Fuente: </strong>Recursos propios</p>
-                        <p><strong>Nombre de la Cuenta: </strong>Fundación Pies Descalzos</p>
-                        <p><strong>Número de Cuenta: </strong>6758-9879-98760</p>
-                        <p><strong>Banco: </strong>Bancolombia</p>
-                        <p><strong>Tipo de Cuenta: </strong>Ahorros</p>
-                        <p><strong>Código SIFI: </strong>358765</p>
-                    </div>
-                </mat-card-content>
-            </mat-card>
+
+            <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
