--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -124,7 +124,7 @@
             Get conceptos seleccionados
           -->
           <div class="animatedDown" formArrayName="conceptos" *ngFor="let concepto of getConceptos( i ).controls; index as j">
-            <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0em; margin-top: 0.5em;"> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </mat-card-title>
+            <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0em; margin-top: 0.5em; font-size: 16px;"> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </mat-card-title>
             <div class="row" [formGroup]="concepto">
               <div class="col-md-8">
                 <div class="row">
@@ -175,8 +175,8 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row" style=" margin-top: 10px;">
-                <div class="pr-1">
-                  <label class="header-card--text" for="valorFacturado" style="padding-left: 0em;"
+                <div class="pr-1" style="margin-top: 0.5em;">
+                  <label class="header-card--text" for="valorFacturado" style="padding-left: 0em; font-size: 16px;"
                   [ngClass]="{
                     'color-secondaryColor':
                       (criterio.get('valorFacturado').invalid && criterio.get('valorFacturado').touched) ||
