--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -6,7 +6,7 @@
                 <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.faseContrato }} </b> </td>
             </ng-container>
             <ng-container matColumnDef="pagosRealizados">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos Realizados </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos realizados </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.pagosRealizados !== undefined ? element.pagosRealizados : 0 }} </td>
             </ng-container>
             <ng-container matColumnDef="valorFacturado">
