--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-soporte-solicitud-url/form-soporte-solicitud-url.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-soporte-solicitud-url/form-soporte-solicitud-url.component.html
@@ -20,8 +20,7 @@
                             <mat-form-field class="full-width">
                                 <input matInput #urlSoporte type="text" formControlName="urlSoporte" required>
                             </mat-form-field>
-                            <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte del
-                                registro de la actuación de trámite</span>
+                            <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte de la novedad</span>
                         </div>
                         <span class="icon-incompleto">
                             <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
