--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.scss
@@ -15,3 +15,12 @@ table td.detalle{
     border-color: #474747;
     color: #474747;
 }
+.w-2{
+    width: 2%;
+}
+.w-20{
+    width: 20%;
+}
+.w-60{
+    width: 60%;
+}
