--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -122,7 +122,7 @@
                                 <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.faseContrato }} </b> </td>
                             </ng-container>
                             <ng-container matColumnDef="pagosRealizados">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos Realizados </th>
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos realizados </th>
                                 <td mat-cell *matCellDef="let element" align="center"> {{ element.pagosRealizados !== undefined ? element.pagosRealizados : 0 }} </td>
                             </ng-container>
                             <ng-container matColumnDef="valorFacturado">
@@ -194,10 +194,10 @@
                                                             <mat-card-content style="text-align: left;">
                                                                 <p style="margin-bottom: 2em;"><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
                                                                 <div style="margin-top: 2em;" *ngFor="let concepto of getConceptos( j ).controls">
-                                                                    <p style="font-size: 1.8em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                                                                    <p style="font-size: 16px;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
                                                                     <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                                                                 </div>
-                                                                <p style="margin-top: 2em;"><strong style="font-size: 1.8em;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                                                                <p style="margin-top: 2em;"><strong style="font-size: 16px;">Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                                                             </mat-card-content>
                                                         </mat-card>
                                                     </div>
