--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
@@ -50,7 +50,7 @@
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroContrato }} </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistroPago">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%;"> Estado del registro de pago </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%;"> Estado de la solicitud de pago </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.estado }} </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistro">
