--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-representante/form-representante.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-representante/form-representante.component.html
@@ -1,160 +1,164 @@
-<div *ngIf="representantesForm.get( 'numRepresentantesRecorrido' ).value > 0" [formGroup]="representantesForm">
-  <mat-accordion class="animatedDown" formArrayName="representantes" *ngFor="let representante of representantes.controls; index as i">
+<div *ngIf="representantesForm.get('numRepresentantesRecorrido').value > 0" [formGroup]="representantesForm">
+  <mat-accordion
+    class="animatedDown"
+    formArrayName="representantes"
+    *ngFor="let representante of representantes.controls; index as i"
+  >
     <mat-expansion-panel
       class="expansion-style sub-expansion"
-      [formGroup]="representante" novalidate (ngSubmit)="onSubmit()"
+      [formGroup]="representante"
+      novalidate
+      (ngSubmit)="onSubmit()"
     >
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title
-          class="expansion-style--title"
-          [ngClass]="representante.get('semaforo').value"
-        >
+        <mat-panel-title class="expansion-style--title" [ngClass]="representante.get('semaforo').value">
           Representante {{ i + 1 }}
         </mat-panel-title>
       </mat-expansion-panel-header>
-        <mat-card class="shipping-card">
-          <mat-card-content>
-            <div class="row">
-              <div class="pr-1">
-                <label
-                  class="label-left"
-                  for="nombre"
-                  [class.color-secondaryColor]="
+      <mat-card class="shipping-card">
+        <mat-card-content>
+          <div class="row">
+            <div class="pr-1">
+              <label
+                class="label-left"
+                for="nombre"
+                [class.color-secondaryColor]="
+                  (representante.get('nombre').invalid && representante.get('nombre').touched) ||
+                  (representante.get('nombre').invalid && estaEditando)
+                "
+              >
+                Nombre y apellidos
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="full-width">
+                <input matInput type="text" #nombre formControlName="nombre" maxlength="100" required />
+              </mat-form-field>
+              <span
+                class="contador"
+                [matTooltipPosition]="'above'"
+                matTooltip="Campo numérico"
+                matTooltipClass="info-tooltip"
+              >
+                {{ 100 - nombre.value.length }}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
                     (representante.get('nombre').invalid && representante.get('nombre').touched) ||
                     (representante.get('nombre').invalid && estaEditando)
                   "
-                >
-                  Nombre y apellidos
-                </label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="full-width">
-                  <input matInput type="text" #nombre formControlName="nombre" maxlength="100" required />
-                </mat-form-field>
-                <span
-                  class="contador"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Campo numérico"
-                  matTooltipClass="info-tooltip"
-                >
-                  {{ 100 - nombre.value.length }}
-                </span>
-                <span class="icon-incompleto">
-                  <img
-                    class="icon-incompleto--img"
-                    src="assets/img/icon/incompleto.svg"
-                    alt="este campo es requerido"
-                    [matTooltipPosition]="'above'"
-                    matTooltip="Debe ingresar la información en el campo para continuar"
-                    matTooltipClass="info-tooltip"
-                    *ngIf="
-                      (representante.get('nombre').invalid && representante.get('nombre').touched) ||
-                      (representante.get('nombre').invalid && estaEditando)
-                    "
-                  />
-                </span>
-              </div>
+                />
+              </span>
             </div>
-            <div class="row">
-              <div class="pr-1">
-                <label
-                  class="label-left"
-                  for="cargo"
-                  [class.color-secondaryColor]="
+          </div>
+          <div class="row">
+            <div class="pr-1">
+              <label
+                class="label-left"
+                for="cargo"
+                [class.color-secondaryColor]="
+                  (representante.get('cargo').invalid && representante.get('cargo').touched) ||
+                  (representante.get('cargo').invalid && estaEditando)
+                "
+              >
+                Cargo
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="full-width">
+                <input matInput type="text" #cargo formControlName="cargo" maxlength="100" required />
+              </mat-form-field>
+              <span
+                class="contador"
+                [matTooltipPosition]="'above'"
+                matTooltip="Campo numérico"
+                matTooltipClass="info-tooltip"
+              >
+                {{ 100 - cargo.value.length }}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
                     (representante.get('cargo').invalid && representante.get('cargo').touched) ||
                     (representante.get('cargo').invalid && estaEditando)
                   "
-                >
-                  Cargo
-                </label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="full-width">
-                  <input matInput type="text" #cargo formControlName="cargo" maxlength="100" required />
-                </mat-form-field>
-                <span
-                  class="contador"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Campo numérico"
-                  matTooltipClass="info-tooltip"
-                >
-                  {{ 100 - cargo.value.length }}
-                </span>
-                <span class="icon-incompleto">
-                  <img
-                    class="icon-incompleto--img"
-                    src="assets/img/icon/incompleto.svg"
-                    alt="este campo es requerido"
-                    [matTooltipPosition]="'above'"
-                    matTooltip="Debe ingresar la información en el campo para continuar"
-                    matTooltipClass="info-tooltip"
-                    *ngIf="
-                      (representante.get('cargo').invalid && representante.get('cargo').touched) ||
-                      (representante.get('cargo').invalid && estaEditando)
-                    "
-                  />
-                </span>
-              </div>
+                />
+              </span>
             </div>
-            <div class="row">
-              <div class="pr-1">
-                <label
-                  class="label-left"
-                  for="dependencia"
-                  [class.color-secondaryColor]="
+          </div>
+          <div class="row">
+            <div class="pr-1">
+              <label
+                class="label-left"
+                for="dependencia"
+                [class.color-secondaryColor]="
+                  (representante.get('dependencia').invalid && representante.get('dependencia').touched) ||
+                  (representante.get('dependencia').invalid && estaEditando)
+                "
+              >
+                Dependencia de la ETC
+              </label>
+            </div>
+            <div class="col d-flex">
+              <mat-form-field class="full-width">
+                <input matInput type="text" #dependencia formControlName="dependencia" maxlength="100" required />
+              </mat-form-field>
+              <span
+                class="contador"
+                [matTooltipPosition]="'above'"
+                matTooltip="Campo numérico"
+                matTooltipClass="info-tooltip"
+              >
+                {{ 100 - dependencia.value.length }}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
                     (representante.get('dependencia').invalid && representante.get('dependencia').touched) ||
                     (representante.get('dependencia').invalid && estaEditando)
                   "
-                >
-                  Dependencia de la ETC
-                </label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="full-width">
-                  <input matInput type="text" #dependencia formControlName="dependencia" maxlength="100" required />
-                </mat-form-field>
-                <span
-                  class="contador"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Campo numérico"
-                  matTooltipClass="info-tooltip"
-                >
-                  {{ 100 - dependencia.value.length }}
-                </span>
-                <span class="icon-incompleto">
-                  <img
-                    class="icon-incompleto--img"
-                    src="assets/img/icon/incompleto.svg"
-                    alt="este campo es requerido"
-                    [matTooltipPosition]="'above'"
-                    matTooltip="Debe ingresar la información en el campo para continuar"
-                    matTooltipClass="info-tooltip"
-                    *ngIf="
-                      (representante.get('dependencia').invalid && representante.get('dependencia').touched) ||
-                      (representante.get('dependencia').invalid && estaEditando)
-                    "
-                  />
-                </span>
-              </div>
+                />
+              </span>
             </div>
-          </mat-card-content>
-        </mat-card>
-        <div class="text-right" *ngIf="representantesForm.get( 'numRepresentantesRecorrido' ).value > 1">
-          <button mat-button
-                  color="warn"
-                  type="button"
-                  class="btn-eliminar"
-                  (click)="eliminarRepresentante( representante.get( 'representanteEtcid' ).value, i )">
-            <img src="assets/img/icon/menos.svg">
-            Eliminar representante
-          </button>
+          </div>
+        </mat-card-content>
+      </mat-card>
+      <div class="text-right" *ngIf="representantesForm.get('numRepresentantesRecorrido').value > 1">
+        <button
+          mat-button
+          color="warn"
+          type="button"
+          class="btn-eliminar"
+          (click)="eliminarRepresentante(representante.get('representanteEtcid').value, i)"
+        >
+          <img src="assets/img/icon/menos.svg" />
+          Eliminar representante
+        </button>
       </div>
-        <div class="text-center">
-          <button mat-button color="warn" class="btn-guardar" type="submit" (click)="guardar()">
-            <img src="assets/img/icon/guardar.svg" alt="Guardar" />
-          </button>
-        </div>
+      <div class="text-center">
+        <button mat-button color="warn" class="btn-guardar" type="submit" (click)="guardar()">
+          <img src="assets/img/icon/guardar.svg" alt="Guardar" />
+        </button>
+      </div>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
-
