--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -12,53 +12,41 @@
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaTerminacion Column -->
     <ng-container matColumnDef="fechaSuscripcion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de terminación del proyecto
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de terminación del proyecto</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaSuscripcion | date: "dd/MM/yyyy" }}</b>
+        <b>{{ element.fechaSuscripcion }}</b>
       </td>
     </ng-container>
 
     <!-- llaveMen Column -->
     <ng-container matColumnDef="llaveMen">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Llave MEN
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Llave MEN</th>
+      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
     <ng-container matColumnDef="tipoIntervencion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Tipo de intervención
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de intervención</th>
+      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
     <ng-container matColumnDef="institucionEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Institución Educativa
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Institución Educativa</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.proyecto.institucionEducativa.nombre }}
+        {{ element.institucionEducativa }}
       </td>
     </ng-container>
 
     <!-- sedeEducativa Column -->
     <ng-container matColumnDef="sedeEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Sede
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sede</th>
+      <td mat-cell *matCellDef="let element">{{ element.sede }}</td>
     </ng-container>
 
     <!-- estadoEntrega Column -->
     <ng-container matColumnDef="estadoEntregaETCString">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la entrega
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la entrega</th>
       <td mat-cell *matCellDef="let element">
         {{ element.estadoEntregaETCString }}
       </td>
@@ -66,45 +54,45 @@
 
     <!-- registroCompleto Column -->
     <ng-container matColumnDef="registroCompletoEntregaETC">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado del registro
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del registro</th>
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="!element.registroCompletoEntregaEtc || element.registroCompletoEntregaEtc == null"
-          [class.completo]="element.registroCompletoEntregaEtc"
+          [class.sin-diligenciar]="element.registroCompletoEntregaEtc === 'Incompleto'"
+          [class.completo]="element.registroCompletoEntregaEtc === 'Completo'"
         ></span>
-        <span
-        *ngIf="element.registroCompletoEntregaEtc"
-          >
-          Completo
-      </span>
-      <span
-      *ngIf="!element.registroCompletoEntregaEtc || element.registroCompletoEntregaEtc == null"
-        >
-        Incompleto
-    </span>
+        {{ element.registroCompletoEntregaEtc }}
       </td>
     </ng-container>
 
     <!-- id Column -->
     <ng-container matColumnDef="informeFinalId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Gestión
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <a *ngIf="element.estadoEntregaEtc !='2'"
+        <a
+          *ngIf="element.estadoEntregaEtc != '2'"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['registrarEntrega', element.informeFinalId]"
         >
-        <span *ngIf="element.estadoEntregaEtc === '0' || element.estadoEntregaEtc === null || !element.estadoEntregaEtc">Registrar entrega</span>
-        <span *ngIf="element.estadoEntregaEtc && element.estadoEntregaEtc !== '0' && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc !== null">Ver detalle/Editar</span>
+          <span
+            *ngIf="element.estadoEntregaEtc === '0' || element.estadoEntregaEtc === null || !element.estadoEntregaEtc"
+            >Registrar entrega</span
+          >
+          <span
+            *ngIf="
+              element.estadoEntregaEtc &&
+              element.estadoEntregaEtc !== '0' &&
+              element.estadoEntregaEtc !== '2' &&
+              element.estadoEntregaEtc !== null
+            "
+            >Ver detalle/Editar</span
+          >
         </a>
-        <a *ngIf="element.estadoEntregaEtc === '2'"
+        <a
+          *ngIf="element.estadoEntregaEtc === '2'"
           mat-button
           mat-raised-button
           color="accent"
@@ -115,7 +103,9 @@
           Ver detalle
         </a>
         <button
-        *ngIf="element.registroCompletoEntregaEtc === true && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc"
+          *ngIf="
+            element.registroCompletoEntregaEtc === true && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc
+          "
           mat-button
           mat-raised-button
           color="accent"
@@ -123,8 +113,8 @@
           type="button"
           (click)="enviarProyectoAEtc(element.informeFinalId)"
         >
-        Proyecto entregado
-      </button>
+          Proyecto entregado
+        </button>
       </td>
     </ng-container>
 
