--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -12,120 +12,130 @@
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaEnvio Column -->
     <ng-container matColumnDef="fechaCreacion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de envío del informe final
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de envío del informe final</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaCreacion  | date:'dd/MM/yyyy'}}</b>
+        <b>{{ element.fechaCreacion }}</b>
       </td>
     </ng-container>
 
     <!-- fechaAprobacion Column -->
     <ng-container matColumnDef="fechaAprobacion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de aprobación del informe final
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de aprobación del informe final</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaAprobacion | date:'dd/MM/yyyy'}}</b>
+        <b>{{ element.fechaAprobacion }}</b>
       </td>
     </ng-container>
 
     <!-- llaveMen Column -->
     <ng-container matColumnDef="llaveMen">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Llave MEN
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Llave MEN</th>
+      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
     <ng-container matColumnDef="tipoIntervencion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Tipo de intervención
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de intervención</th>
+      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencion }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
     <ng-container matColumnDef="institucionEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Institución Educativa
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Institución Educativa</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.proyecto.institucionEducativa.nombre }}
+        {{ element.institucionEducativa }}
       </td>
     </ng-container>
 
     <!-- sedeEducativa Column -->
     <ng-container matColumnDef="sedeEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Sede
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sede</th>
+      <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
     </ng-container>
 
     <!-- estadoVerificacion Column -->
     <ng-container matColumnDef="estadoCumplimientoString">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la validación
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la validación</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.estadoCumplimientoString }}
+        {{ element.estadoVerificacion }}
       </td>
     </ng-container>
 
     <!-- id Column -->
     <ng-container matColumnDef="proyectoId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Gestión
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <button
-          *ngIf="element.registroCompletoCumplimiento != null && element.registroCompletoCumplimiento 
-                  && !element.tieneObservacionesInterventoria && !element.tieneObservacionesCumplimiento 
-                  && element.estadoCumplimiento === '1'"
-            mat-button
-            mat-raised-button
-            color="accent"
-            class="btn-table"
-            type="button"
-            (click)="approveFinalReportByFulfilment(element.proyectoId)"
-          >
-          Validar Informe Final <!--TieneObservacionesInterventoria (false) && en proceso de validación cumplimiento-->
-        </button>
-        <button
-          *ngIf="element.registroCompletoCumplimiento!= null && element.registroCompletoCumplimiento 
-                  && (element.tieneObservacionesInterventoria || element.tieneObservacionesCumplimiento) 
-                  && element.estadoCumplimiento === '1'"
-            mat-button
-            mat-raised-button
-            color="accent"
-            class="btn-table"
-            type="button"
-            (click)="sendFinalReportToSupervision(element.proyectoId)"
-          >
-          Enviar al supervisor <!--TieneObservacionesInterventoria (true) && en proceso de validación cumplimiento-->
-        </button>
-        <a *ngIf="!(element.estadoCumplimiento === '2' || element.estadoCumplimiento === '3')"
-          mat-button
-          mat-raised-button
-          color="accent"
-          class="btn-table"
-          [routerLink]="['revisarInforme', element.proyectoId]"
-        >
-          <span *ngIf="element.estadoCumplimiento == '' || element.estadoCumplimiento == null || element.estadoCumplimiento === '0'">Revisar informe</span> <!--Null o 0-->
-          <span *ngIf="element.estadoCumplimiento != null && element.estadoCumplimiento !== '0' && (element.estadoCumplimiento === '1' || element.estadoCumplimiento === '4')">ver Detalle/Editar</span><!--En proceso de validación de cumplimiento-->
-        </a>
-        <a
-        *ngIf="element.estadoCumplimiento === '2' || element.estadoCumplimiento === '3'"
+          *ngIf="
+            element.registroCompletoCumplimiento != null &&
+            element.registroCompletoCumplimiento &&
+            !element.tieneObservacionesInterventoria &&
+            !element.tieneObservacionesCumplimiento &&
+            element.estadoCumplimiento === '1'
+          "
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           type="button"
-          [routerLink]="['verDetalle', element.proyectoId]"
+          (click)="approveFinalReportByFulfilment(element.id)"
         >
-          Ver detalle <!--Con observaciones de liquidación y/o informe validado -->
+          Validar Informe Final
+          <!--TieneObservacionesInterventoria (false) && en proceso de validación cumplimiento-->
+        </button>
+        <button
+          *ngIf="
+            element.registroCompletoCumplimiento != null &&
+            element.registroCompletoCumplimiento &&
+            (element.tieneObservacionesInterventoria || element.tieneObservacionesCumplimiento) &&
+            element.estadoCumplimiento === '1'
+          "
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          (click)="sendFinalReportToSupervision(element.id)"
+        >
+          Enviar al supervisor
+          <!--TieneObservacionesInterventoria (true) && en proceso de validación cumplimiento-->
+        </button>
+        <a
+          *ngIf="!(element.estadoCumplimiento === '2' || element.estadoCumplimiento === '3')"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['revisarInforme', element.id]"
+        >
+          <span
+            *ngIf="
+              element.estadoCumplimiento == '' ||
+              element.estadoCumplimiento == null ||
+              element.estadoCumplimiento === '0'
+            "
+            >Revisar informe</span
+          >
+          <!--Null o 0-->
+          <span
+            *ngIf="
+              element.estadoCumplimiento != null &&
+              element.estadoCumplimiento !== '0' &&
+              (element.estadoCumplimiento === '1' || element.estadoCumplimiento === '4')
+            "
+            >ver Detalle/Editar</span
+          ><!--En proceso de validación de cumplimiento-->
+        </a>
+        <a
+          *ngIf="element.estadoCumplimiento === '2' || element.estadoCumplimiento === '3'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          [routerLink]="['verDetalle', element.id]"
+        >
+          Ver detalle
+          <!--Con observaciones de liquidación y/o informe validado -->
         </a>
       </td>
     </ng-container>
