--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -12,53 +12,41 @@
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaEnvio Column -->
     <ng-container matColumnDef="fechaEnvio">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de envío del informe final
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de envío del informe final</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaCreacion  | date:'dd/MM/yyyy'}}</b>
+        <b>{{ element.fechaCreacion }}</b>
       </td>
     </ng-container>
 
     <!-- llaveMen Column -->
     <ng-container matColumnDef="llaveMen">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Llave MEN
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Llave MEN</th>
+      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
     <ng-container matColumnDef="tipoIntervencion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Tipo de intervención
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de intervención</th>
+      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
     <ng-container matColumnDef="institucionEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Institución Educativa
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Institución Educativa</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.proyecto.institucionEducativa.nombre }}
+        {{ element.institucionEducativa }}
       </td>
     </ng-container>
 
     <!-- sedeEducativa Column -->
     <ng-container matColumnDef="sedeEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Sede
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sede</th>
+      <td mat-cell *matCellDef="let element">{{ element.sede }}</td>
     </ng-container>
 
     <!-- estadoVerificacion Column -->
     <ng-container matColumnDef="estadoAprobacionString">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la validación
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la validación</th>
       <td mat-cell *matCellDef="let element">
         {{ element.estadoAprobacionString }}
       </td>
@@ -66,44 +54,63 @@
 
     <!-- contratacionProyectoId Column -->
     <ng-container matColumnDef="proyectoId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Gestión
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <button
           *ngIf="element.estadoAprobacion === '3'"
-            mat-button
-            mat-raised-button
-            color="accent"
-            class="btn-table"
-            type="button"
-            (click)="sendFinalReportToInterventor(element.proyectoId)"
-          >
-          Enviar al interventor <!--Con observaciones  supervisor (3)-->
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          (click)="sendFinalReportToInterventor(element.proyectoId)"
+        >
+          Enviar al interventor
+          <!--Con observaciones  supervisor (3)-->
         </button>
         <button
           *ngIf="element.estadoAprobacion === '4'"
-            mat-button
-            mat-raised-button
-            color="accent"
-            class="btn-table"
-            type="button"
-            (click)="sendFinalReportToFinalVerification(element.proyectoId)"
-          >
-          Enviar a verificación final <!--Con aprobación supervisor (4)-->
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          (click)="sendFinalReportToFinalVerification(element.proyectoId)"
+        >
+          Enviar a verificación final
+          <!--Con aprobación supervisor (4)-->
         </button>
-        <a *ngIf="!(element.estadoAprobacion === '6' || element.estadoAprobacion === '2')"
+        <a
+          *ngIf="!(element.estadoAprobacion === '6' || element.estadoAprobacion === '2')"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['validar', element.proyectoId]"
         >
-          <span *ngIf="element.estadoAprobacion == null || element.estadoAprobacion === '0' || element.estadoAprobacion === '7'">Validar informe</span> <!--Null o 0-->
-          <span *ngIf="element.estadoAprobacion != null && element.estadoAprobacion !== '0' && element.estadoAprobacion !== '7' && element.estadoAprobacion !== '6' && element.estadoAprobacion !== '2'">Ver detalle/Editar</span><!-- !== 6/2 -->
+          <span
+            *ngIf="
+              element.estadoAprobacion == null || element.estadoAprobacion === '0' || element.estadoAprobacion === '7'
+            "
+          >
+            Validar informe
+          </span>
+          <!--Null o 0-->
+          <span
+            *ngIf="
+              element.estadoAprobacion != null &&
+              element.estadoAprobacion !== '0' &&
+              element.estadoAprobacion !== '7' &&
+              element.estadoAprobacion !== '6' &&
+              element.estadoAprobacion !== '2'
+            "
+          >
+            Ver detalle/Editar
+          </span>
+          <!-- !== 6/2 -->
         </a>
         <a
-        *ngIf="element.estadoAprobacion === '6' || element.estadoAprobacion === '2'"
+          *ngIf="element.estadoAprobacion === '6' || element.estadoAprobacion === '2'"
           mat-button
           mat-raised-button
           color="accent"
@@ -111,7 +118,8 @@
           type="button"
           [routerLink]="['verDetalle', element.proyectoId]"
         >
-          Ver detalle <!--Devuelta por supervisor (6) y enviado a liquidación (2)-->
+          Ver detalle
+          <!--Devuelta por supervisor (6) y enviado a liquidación (2)-->
         </a>
       </td>
     </ng-container>
