--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -12,53 +12,41 @@
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaEnvio Column -->
     <ng-container matColumnDef="fechaCreacion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de envío del informe final
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de envío del informe final</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaCreacion  | date:'dd/MM/yyyy' }}</b>
+        <b>{{ element.fechaCreacion }}</b>
       </td>
     </ng-container>
 
     <!-- llaveMen Column -->
     <ng-container matColumnDef="llaveMen">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Llave MEN
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Llave MEN</th>
+      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
     <ng-container matColumnDef="tipoIntervencion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Tipo de intervención
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de intervención</th>
+      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
     <ng-container matColumnDef="institucionEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Institución Educativa
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Institución Educativa</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.proyecto.institucionEducativa.nombre }}
+        {{ element.institucionEducativa }}
       </td>
     </ng-container>
 
     <!-- sedeEducativa Column -->
     <ng-container matColumnDef="sedeEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Sede
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sede</th>
+      <td mat-cell *matCellDef="let element">{{ element.sede }}</td>
     </ng-container>
 
     <!-- estadoVerificacion Column -->
     <ng-container matColumnDef="estadoValidacionString">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la verificación
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la verificación</th>
       <td mat-cell *matCellDef="let element">
         {{ element.estadoValidacionString }}
       </td>
@@ -66,35 +54,23 @@
 
     <!-- registroCompleto Column -->
     <ng-container matColumnDef="registroCompletoValidacion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado del registro
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del registro</th>
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="!element.registroCompletoValidacion || element.registroCompletoValidacion == null"
-          [class.completo]="element.registroCompletoValidacion"
+          [class.sin-diligenciar]="element.registroCompletoValidacion === 'Incompleto'"
+          [class.completo]="element.registroCompletoValidacion === 'Completo'"
         ></span>
-        <span
-        *ngIf="element.registroCompletoValidacion"
-         >
-         Completo
-      </span>
-      <span
-      *ngIf="!element.registroCompletoValidacion || element.registroCompletoValidacion == null"
-       >
-       Incompleto
-    </span>
+        {{ element.registroCompletoValidacion }}
       </td>
     </ng-container>
 
     <!-- contratacionProyectoId Column -->
     <ng-container matColumnDef="proyectoId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Gestión
-      </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <a *ngIf="element.estadoValidacion === '0'"
+        <a
+          *ngIf="element.estadoValidacion === '0'"
           mat-button
           mat-raised-button
           color="accent"
@@ -103,7 +79,13 @@
         >
           Verificar informe
         </a>
-        <a *ngIf="element.estadoValidacion === '1' || element.estadoValidacion === '2' || element.estadoValidacion === '6' || element.estadoValidacion === '9'"
+        <a
+          *ngIf="
+            element.estadoValidacion === '1' ||
+            element.estadoValidacion === '2' ||
+            element.estadoValidacion === '6' ||
+            element.estadoValidacion === '9'
+          "
           mat-button
           mat-raised-button
           color="accent"
@@ -113,7 +95,12 @@
           Ver detalle/Editar
         </a>
         <a
-        *ngIf="element.estadoValidacion === '3' || element.estadoValidacion === '4' || element.estadoValidacion === '7' || element.estadoValidacion === '8'"
+          *ngIf="
+            element.estadoValidacion === '3' ||
+            element.estadoValidacion === '4' ||
+            element.estadoValidacion === '7' ||
+            element.estadoValidacion === '8'
+          "
           mat-button
           mat-raised-button
           color="accent"
@@ -124,7 +111,12 @@
           Ver detalle
         </a>
         <button
-        *ngIf="(element.estadoValidacion === '1' || element.estadoValidacion === '2'  || element.estadoValidacion === '9') && element.registroCompletoValidacion"
+          *ngIf="
+            (element.estadoValidacion === '1' ||
+              element.estadoValidacion === '2' ||
+              element.estadoValidacion === '9') &&
+            element.registroCompletoValidacion
+          "
           mat-button
           mat-raised-button
           color="accent"
@@ -132,18 +124,18 @@
           type="button"
           (click)="enviarRegistroFinal(element.proyectoId)"
         >
-        Enviar al supervisor
-      </button>
-       <button
-       *ngIf="element.estadoInformeCod === '4'"
+          Enviar al supervisor
+        </button>
+        <button
+          *ngIf="element.estadoInformeCod === '4'"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           type="button"
         >
-        Ver observaciones de supervisor
-      </button>
+          Ver observaciones de supervisor
+        </button>
       </td>
     </ng-container>
 
